# QtLabs2D

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  QtLabs2D.sln  README.md
BouncingBallApp/: BouncingBallApp.vcxproj  PoolTableScene.cpp  PoolTableScene.h  main.cpp  stdafx.h
PoolTableApp/: PoolScene.cpp  PoolScene.h  PoolTableApp.vcxproj  PoolTableApp.vcxproj.filters  PoolTableScene.cpp  PoolTableScene.h  RandomGenerator.cpp  RandomGenerator.h  main.cpp
Sample05/: RandomColorGenerator.cpp  RandomColorGenerator.h  Sample05.vcxproj  Sample05.vcxproj.filters  SimpleScene.cpp  SimpleScene.h  main.cpp
Sample07/: AnimatedScene.cpp  AnimatedScene.h  Sample07.vcxproj  Sample07.vcxproj.filters  TesselateUtils.cpp  TesselateUtils.h  copy_res.bat  draw2d.frag  draw2d.vert  main.cpp
libballs2d/: Ball.cpp  Ball.h  BallPool.cpp  BallPool.h  IBall.h  IBallPool.cpp  IBallPool.h  IPoolTable.cpp  IPoolTable.h  PoolTable.cpp  PoolTable.h  libballs2d.vcxproj  libballs2d.vcxproj.filters  stdafx.cpp
libmath/: Color4f.cpp  Color4f.h  RectF.cpp  RectF.h  Vector2f.cpp  Vector2f.h  libmath.vcxproj  stdafx.cpp
libmath_tests/: libmath_tests.vcxproj  stdafx.cpp  unittest1.cpp  (+3 more)
libs/: CMakeLists.txt
libs/libballs2d/: libballs2d.vcxproj  libballs2d.vcxproj.filters  stdafx.h
libs/libglcore/: GLObject.h  GLUtils.cpp  GLUtils.h  ObjectUtils.cpp  ObjectUtils.h  OpenGL_raii.cpp  OpenGL_raii.h  ShaderUtils.cpp  ShaderUtils.h  libglcore.h  libglcore.vcxproj  libglcore.vcxproj.filters  stdafx.cpp
libs/libmath/: FloatRect.cpp  FloatRect.h  Ray.cpp  Ray.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h  libmath.vcxproj  libmath.vcxproj.filters  stdafx.cpp  stdafx.h
libs/libplatform/: CMakeLists.txt  CatchAndDisplay.cpp  CatchAndDisplay.h  GraphicsSceneAdapter.cpp  GraphicsSceneAdapter.h  IInputListener.h  IRenderScene.h  InputListenerAdapter.cpp  InputListenerAdapter.h  RenderWindow.cpp  RenderWindow.h  ResourceLoader.cpp  ResourceLoader.h  SetupDebugOutput.cpp  SetupDebugOutput.h  TextToImage.cpp  TextToImage.h  libplatform.h  libplatform.vcxproj  libplatform.vcxproj.filters  stdafx.h
libs/tinyxml2/: tinyxml2.vcxproj  tinyxml2.vcxproj.filters
samples/: CMakeLists.txt
samples/Sample05/: RandomColorGenerator.cpp  Sample05.vcxproj  SimpleScene.cpp  SimpleScene.h  main.cpp
samples/Sample06/: Sample06.vcxproj  Sample06.vcxproj.filters  SimpleScene.cpp  SimpleScene.h  TesselateUtils.cpp  TesselateUtils.h  copy_res.bat  draw2d.frag  draw2d.vert  main.cpp  stdafx.h
samples/Sample07/: AnimatedScene.cpp  AnimatedScene.h  Sample07.vcxproj  Sample07.vcxproj.filters  draw2d.frag  draw2d.vert  main.cpp  stdafx.h
samples/Sample08/: CameraController.cpp  CameraController.h  FlyingCamera.cpp  ICameraController.h  IFlyingCamera.h  MeshP3C3.cpp  MeshP3C3.h  Sample08.vcxproj  Sample08.vcxproj.filters  Simple3DScene.cpp  Simple3DScene.h  copy_res.bat  draw3d.vert  main.cpp  stdafx.h
samples/Sample09/: CameraController.cpp  CameraController.h  Enumerations.h  FlyingCamera.h  IFlyingCamera.h  IShaderProgram.h  LightSource.cpp  LightSource.h  LightingScene.cpp  LightingScene.h  MeshP3N3.cpp  MeshP3N3.h  Sample09.vcxproj  Sample09.vcxproj.filters  ShaderProgram.h  TesselateUtils.cpp  TesselateUtils.h  copy_res.bat  lambert_lighting.frag  main.cpp  no_lighting.frag  no_lighting.vert  phong_lighting.frag  phong_lighting.vert  stdafx.h
samples/Sample10/: CameraController.cpp  Enumerations.h  FlyingCamera.cpp  FlyingCamera.h  GameScene.cpp  GameScene.h  GameScene.h.orig  IFlyingCamera.h  IShaderProgram.h  LightSource.h  MemoryTile.cpp  MemoryTile.h  MeshP3N3T2.cpp  MeshP3N3T2.h  Sample10.vcxproj  Sample10.vcxproj.filters  Sample10.vcxproj_BACKUP_18564.filters  Sample10.vcxproj_BASE_18564.filters  Sample10.vcxproj_LOCAL_18564.filters  Sample10.vcxproj_REMOTE_18564.filters  SceneNode.cpp  SceneNode.h  ScoreController.cpp  ScoreController.h  ShaderProgram.cpp  Texture2DAtlas.cpp  Texture2DAtlas.h  TextureUtils.cpp  TextureUtils.h  Tile.cpp  Tile.h  copy_res.bat  main.cpp  phong_lighting.frag  phong_lighting.vert
samples/Sample10/res/: phong_lighting.frag  spites.plist
samples/Sample12/: CameraController.h  ClampedNormalDistribution.h  Enumerations.h  FlyingCamera.h  LightSource.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h  ParticlesScene.cpp  ParticlesScene.h  ParticlesSceneLoader.cpp  ParticlesSceneLoader.h  Sample12.vcxproj  Sample12.vcxproj.filters  SceneGraph.cpp  SceneGraph.h  ShaderProgram.h  SolidObject.cpp  SolidObject.h  copy_res.bat  main.cpp
samples/Sample12/res/: particles.frag  particles.vert  phong_lighting.frag  phong_lighting.vert  scene.json
samples/Sample13/: CurveController.cpp  CurveController.h  CurveModel.cpp  CurveModel.h  CurveView.cpp  CurveView.h  CurvedScene.cpp  CurvedScene.h  Enumerations.h  Sample13.vcxproj  Sample13.vcxproj.filters  TesselateUtils.cpp  TesselateUtils.h  copy_res.bat  main.cpp  stdafx.h
samples/Sample13/res/: draw2d.frag  draw2d.vert
samples/Sample14/: CameraController.h  FlyingCamera.cpp  ICameraController.h  LightSource.cpp  LightSource.h  MeshP3N3.cpp  MeshP3N3.h  NurbsScene.cpp  NurbsScene.h  Sample14.vcxproj  Sample14.vcxproj.filters  TeapotData.h  TesselateUtils.cpp  TextureUtils.cpp  copy_res.bat  main.cpp
samples/Sample14/res/: phong_lighting.frag
samples/Sample15/: CameraController.cpp  IFlyingCamera.h  IShaderProgram.h  IsoSurface.cpp  IsoSurface.h  IsoSurfaceSources.cpp  IsosurfaceScene.cpp  IsosurfaceScene.h  MarchingTetrahedra.cpp  MarchingTetrahedra.h  MeshP3N3.cpp  Sample15.vcxproj  Sample15.vcxproj.filters  SceneGraph.h  ShaderProgram.cpp  TeapotData.h  TesselateUtils.cpp  TesselateUtils.h  copy_res.bat  main.cpp
samples/Sample16/: Enumerations.h  IsoSurface.cpp  IsoSurface.h  IsoSurfaceSources.h  MeshP3C3N3.cpp  MeshP3C3N3.h  PointCloudScene.cpp  PointCloudScene.h  PointCloudUtils.cpp  PointCloudUtils.h  Sample16.vcxproj  Sample16.vcxproj.filters  TesselateUtils.cpp  TesselateUtils.h  copy_res.bat  main.cpp  stdafx.h
samples/Sample16/res/: phong_lighting.frag  phong_lighting.vert
(+21 files in other folders)
